# common-task-framework-SDF

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  r451-tidyverse-extended.def
documentation/factor-ml/: factor_ml.qmd  references.bib
documentation/markowitz-ml/: markowitz_ml.qmd  references.bib
documentation/minimum-variance/: minimum_variance.qmd  references.bib
documentation/one_over_n/: one_over_n.docx
models_R/: kns_pc.R
models_R/KNS/: kns_l2.R  kns_pc.R  kns_pc.slurm  kns_pc_testing.R
models_R/factor-ml/: factor_ml.R  factor_ml.slurm  factor_ml_standalone.R  factor_ml_testing.R
models_R/factor-ml-old/: 0-functions.R  1-setup.R  2-data.R  3-xgb.R  4-predictions.R  5-portfolios.R  slurm-recipe-xgb.R  slurm_script.sh
models_R/markowitz-ml/: markowitz_ml.R  markowitz_ml.slurm  markowitz_ml_standalone.R  markowitz_ml_testing.R
models_R/markowitz-ml/old/: 3.2-markowitz.R
models_R/minimum-variance/: minimum_variance.R  minimum_variance.slurm  minimum_variance_standalone.R  minimum_variance_testing.R
models_R/minimum-variance/old_code/: 0-functions.R  1-setup.R  2-var_cov.R  3-portfolios.R  check.R  joblist.txt  slurm_script.sh  submit_to_slurm.R  woodbury_inversion.R
models_python/IPCA_pf/: ipca_pf.py
models_python/one_over_n/: one_over_N.py
scripts/: build_model.R  data_prep.py
utils/: data_prep.py  toy_data.R
utils/R/: data_prep.R  factor_model_utils.R  local_testing.R  xgb_utils.R
