[project]
name = "ctf-github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyring>=25.6.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "psycopg2>=2.9.10",
    "pyarrow>=20.0.0",
    "pyreadstat>=1.3.1",
    "sqlalchemy>=2.0,<3",
]
